# Rubiks_Cube_Solver

./: CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube1dArray.h  RubiksCube3dArray.cpp  RubiksCube3dArray.h  RubiksCubeBitboard.cpp  RubiksCubeBitboard.h
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.h  PermutationIndexer.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
